--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
                 <ul class="list">
                     <li><i class="fa fas fa-phone-alt"></i><span>+91 8950112025</span></li>
                     <li><i class="fa far fa-envelope"></i><span>tarunjangra4@gmail.com</span></li>
-                    <li><i class="fa fas fa-globe-asia"></i><span>www.myPortfolio.tj.com</span></li>
-                    <li> <i class="fab fa-linkedin-in"></i><span>www.linkedin.com/tj</span></li>
+                    <li> <i class="fab fa-linkedin-in"></i><span>shorturl.at/ehqAK</span></li>
                     <li> <i class="fa fas fa-search-location"></i><span>Rewari, Haryana</span></li>
                 </ul>
             </div>
